# Compiler-Project2

./: CMakeLists.txt  TODO
grammarFiles/: projectExpr.g4
include/: IR.h  IRMutator.h  IRPrinter.h  JsonPrinter.h  transform.h
project1/: CMakeLists.txt  TODO  run.cc  run.h
project1/cases/: additional_case11.json  additional_case12.json  additional_case13.json  additional_case14.json  additional_case15.json  additional_case16.json  additional_case17.json  additional_case18.json
project1/clean/: clean.cc
project1/kernels/: kernel_additional_case11.cc  kernel_additional_case12.cc  kernel_additional_case13.cc  kernel_additional_case14.cc  kernel_additional_case15.cc  kernel_additional_case16.cc  kernel_additional_case17.cc  kernel_additional_case18.cc  kernel_case1.cc  kernel_case10.cc  kernel_case2.cc  kernel_case3.cc  kernel_case4.cc  kernel_case5.cc  kernel_case6.cc  kernel_case7.cc  kernel_case8.cc  kernel_case9.cc  kernel_example.cc
project1/solution/: solution.cc
project2/: CMakeLists.txt
project2/kernels/: grad_case1.cc  grad_case10.cc  grad_case2.cc  grad_case3.cc  grad_case4.cc  grad_case5.cc  grad_case6.cc  grad_case7.cc  grad_case8.cc  grad_case9.cc
project2/solution/: solution2.cc
src/: IRMutator.cc  IRPrinter.cc  JsonPrinter.cc  transform.cc  transform.cpp  transform.h  transformtest.cpp
test/: conv2d.cc  gemm.cc
